--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: adamf@vmware.com
 description: >- # this means to ignore newlines until "baseurl:"
   The home for our research in to low level mobile phone Bluetooth
   capabilities, issues, workarounds, and testing.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/herald" # the subpath of your site, e.g. /blog
+url: "https://vmware.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: adamfowleruk
 github_username:  adamfowleruk
 
