Added International Interoperability diagram and explanation
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_data/docs_menu.yaml
+++ b/_data/docs_menu.yaml
@@ -36,6 +36,8 @@
       link: /payload
     - name: Herald Envelope Header 
       link: /payload/envelope
+    - name: Interoperability
+      link: /payload/interop
     - name: Herald Common CT Inner Header 
       link: /payload/common
     - name: Herald Simple Inner Payload 
