Fixes #5. Added herald stats to website
Related to #14
Added background stats
- BLE support for all protocols
- Herald specific summary stats
- Links to sources
- Made stats on website consistent, and linked to stats page for sources
- Added summary charts and data for latest Herald formal tests
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_data/efficacy_menu.yaml
+++ b/_data/efficacy_menu.yaml
@@ -8,5 +8,9 @@
       link: /efficacy/method
     - name: Test Results
       link: /efficacy/results
+    - name: Statistics
+      link: /efficacy/statistics
+    - name: Herald Performance
+      link: /efficacy/herald
     - name: Bibliography
       link: /efficacy/bibliography
