--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ plugins:
   - jekyll-paginate # pagination object for collections (e.g. posts)
   - jekyll-redirect-from
   - jekyll-seo-tag
+  - jekyll-spaceship
 
 permalink: blog/:title
 sass:
