Page unique name fix
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_data/docs_menu.yaml
+++ b/_data/docs_menu.yaml
@@ -93,5 +93,5 @@
     - name: Secured Payload
       link: /specs/payload-secured
     - name: International Interoperability
-      link: /specs/interop
+      link: /specs/payload-interop
     
