Added Beacon Payload specification and amended specs list
Added Beacon Payload specification and amended specs list
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_data/docs_menu.yaml
+++ b/_data/docs_menu.yaml
@@ -88,6 +88,10 @@
       link: /specs
     - name: Herald Protocol
       link: /specs/protocol
+    - name: Beaacon Payload
+      link: /specs/payload-beacon
+    - name: Extended Data Area
+      link: /specs/payload-extended
     - name: Simple Payload
       link: /specs/payload-simple
     - name: Secured Payload
