Completed website updates. FIxed #49.
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_data/about_menu.yaml
+++ b/_data/about_menu.yaml
@@ -2,6 +2,8 @@
   items:
     - name: Introduction
       link: /about
+    - name: FAQs
+      link: /about/faq
 - label: Applications
   items:
     - name: Overview
