--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,16 @@
 - name: Home
-  link: /herald/
+  link: /
 - name: About
-  link: /herald/about
+  link: /about
 - name: Community
-  link: /herald/community
+  link: /community
 - name: Blog
-  link: /herald/blog
+  link: /blog
 - name: Download
-  link: /herald/download
+  link: /download
 - name: Documentation
-  link: /herald/docs
+  link: /docs
 - name: Reference
-  link: /herald/reference
+  link: /reference
 - name: Research
-  link: /herald/research
+  link: /research
