--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author: Herald Project Contributors
 description: >- # this means to ignore newlines until "baseurl:"
   The home for our research in to low level mobile phone Bluetooth
   capabilities, issues, workarounds, and testing.
-#baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://theheraldproject.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 logo: /img/herald.png
 gh_repo: https://github.com/theheraldproject/theheraldproject.github.io
