Fixes #84. Added references to LFPH and updated some pages
Various fixes
- Added reference to LFPH and link in footer on all pages
- Added more community description and links to online calendar in LFPH
- Added more up to date wearable information
- Added disease control application prior to DACT backend work
Signed-off-by: Adam Fowler <adam@adamfowler.org>

--- a/_data/applications_menu.yaml
+++ b/_data/applications_menu.yaml
@@ -5,6 +5,8 @@
       link: /applications
     - name: Contact Tracing
       link: /applications/ct
+    - name: Disease Control
+      link: /applications/disease
     - name: Device to Device
       link: /applications/p2p
     - name: Bluetooth Mesh Gateways
