Fixes #29. OpenTrace blog post and pages
OpenTrace announcement related changes:
- Added blog post
- Added Herald and OpenTrace sections of the website
- Updated jekyll dependencies
Signed-off-by: Adam Fowler <adam@adamfowler.org>

--- a/_data/about_menu.yaml
+++ b/_data/about_menu.yaml
@@ -4,6 +4,12 @@
       link: /about
     - name: FAQs
       link: /about/faq
+- label: Packages
+  items:
+    - name: Herald API
+      link: /herald
+    - name: OpenTrace
+      link: /opentrace
 - label: Applications
   items:
     - name: Overview
