--- a/_data/community_menu.yaml
+++ b/_data/community_menu.yaml
@@ -1,7 +1,8 @@
-
 - label: Community
   items:
     - name: Community Home
       link: /community
     - name: Project Advisory Group
       link: /community/pag
+    - name: Partners
+      link: /community/partners
