Part of #117. Added use case landing pages.
Signed-off-by: Adam Fowler <adam@adamfowler.org>

--- a/_data/about_menu.yaml
+++ b/_data/about_menu.yaml
@@ -18,6 +18,8 @@
       link: /applications/ct
     - name: eHealth Wearables
       link: /applications/wearable
+    - name: Beacons
+      link: /applications/beacons
     - name: Device to Device
       link: /applications/p2p
     - name: Bluetooth Mesh Gateways
